altered sidebar to fix profile page alignment

--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -43,10 +43,9 @@ h2 {
     border-right: 1px solid rgb(217,89,112);
     position: sticky;
     height: 100vh;
-    width:15%;
+    width:20%;
     background-color: rgba(255,255,255,.5);
-    padding-top: 20px;
-    padding-left: 70px;
+    padding-top: 50px;
     z-index: 0;
 }
 
@@ -55,6 +54,8 @@ h2 {
 
     padding: 6px 8px 6px 16px;
     text-decoration: none;
+    text-align: right;
+    padding-right: 1em;
     font-size: 20px;
     color: #818181;
     font-size: 13px;
@@ -69,9 +70,11 @@ h2 {
 
 #content {
     position: absolute;
-    left: 15%;
-    width: 85%;
+    left: 20%;
+    width: 80%;
     top: 50px;
+    margin: 10px;
+    padding-left: 1em
 }
 
 
@@ -106,10 +109,6 @@ li > a {
     margin: 25px;
 
 } */
-.body-container{
-    box-sizing: border-box;
-    margin: 45px;
-}
 
 .home-icon{
     height:50px;
