--- a/public/stylesheets/profile.css
+++ b/public/stylesheets/profile.css
@@ -3,8 +3,12 @@
     box-shadow: 0px 0px 4px 0px black;
 }
 
+#content {
+    margin: 0
+}
+
 #content > * {
-    width: 85%;
+    width: 80%;
 }
 
 h1, h2 {
@@ -23,7 +27,7 @@ ul {
 
 #user-banner {
     display: flex;
-    width: 85%;
+    width: 80%;
     justify-content: space-between;
     padding-right: 2em;
 }
